# apex

./: .env.example  .gitignore  .rebase-helper.sh  AGENTS.md  CLAUDE.md  COMPREHENSIVE_TEST_SUMMARY.md  DASHBOARD-TUI.md  DOCUMENTATION_SUMMARY.md  E2E_TESTS_PR_DESCRIPTION.md  ENHANCED-PORT-FORWARDER.md  GITHUB-MERGE-STATUS-IMPLEMENTATION.md  GITHUB_CLI_FIX_DOCUMENTATION.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  ISSUE-58-FIX.md  ISSUE_ANALYSIS_REPORT.md  LICENSE  MERGE_STATUS_FRONTEND_IMPLEMENTATION.md  MIGRATION.md  NETWORK_IMPLEMENTATION.md  OFFLINE_MODE_IMPLEMENTATION_SUMMARY.md  OFFLINE_MODE_TESTING_GUIDE.md  PHASE_4A_IMPLEMENTATION.md  PHASE_4B_IMPLEMENTATION.md  PHASE_4B_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_6_FINAL_SUMMARY.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_6_TESTING_GUIDE.md  PHASE_7_IMPLEMENTATION_SUMMARY.md  PORT-RELAY-IMPLEMENTATION-COMPLETE.md  PORT-RELAY-IMPLEMENTATION-SUMMARY.md  PORT-RELAY-IMPLEMENTATION.md  PORT-RELAY-INTEGRATION-TESTS.md  PORT-RELAY-SERVICE-IMPLEMENTATION.md  PORT-RELAY-SUMMARY.md  PORT-RELAY-TEST-GUIDE.md  PORT-RELAY-TESTS-SUMMARY.md  (+46 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
apps/proxy/: Cargo.toml
apps/proxy/src/: config.rs  llm.rs  main.rs  port_relay.rs  tunnel.rs  tunnel_client.rs
apps/proxy/src/mitm/: auth.rs  cert.rs  mod.rs
data/: codeany.sqlite-shm
hack/: build-vscode-image.sh  create-sandbox.ts
scripts/: build-desktop.js  performance-validation.js  restore-workspace-links.js  run-port-relay-tests.js  (+2 more)
(+413 files in other folders)
