[package]
name = "apex-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1"
http = "1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.26"
dashmap = "6"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
httparse = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
bytes = "1"
futures-util = "0.3"
time = { version = "0.3.47", features = ["macros"] }
url = "2.5.8"
socket2 = "0.6.3"
sha1 = "0.11.0"
arc-swap = "1.9.1"

[profile.release]
opt-level = 3
lto = true
strip = true
